# example_python_sbom

./: README.md  pyproject.toml
example_python_sbom/: __init__.py
sboms/: cyclonedx_env_sbom.json  cyclonedx_poetry_sbom.json  runall.sh  sbom4python_module_sbom.json
tests/: test_value.py
